# ancestry-project

./: .env  .gitignore  CRUSH.md  LICENSE.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
templates/: base.html  questionnaire.html  simulation.html
