[project]
name = "ancestor-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datastar-py>=0.6.3",
    "dotenv>=0.9.9",
    "google-genai>=1.27.0",
    "quart-session>=3.0.0",
    "quart[dotenv]>=0.20.0",
    "redis>=6.2.0",
]